# tinyrt

./: .clangd  LICENSE  Makefile  README.md  compile_commands.json
.github/workflows/: ci.yml
docs/: API.md  API_PARITY.md  ARENA.md  BUILD_TARGETS.md  CLI.md  GETTING_STARTED.md  MNIST.md  MNIST_CNN.md  MODEL_FORMAT.md  ONNX.md  TESTING.md  VECTORS_TESTS.md  c-api.md  cpp-api.md  nn.md
include/: arena.hpp  cnn.hpp  inference.hpp  json_parser.hpp  model_loader.hpp  netkit.h  tensor.hpp  tensor_factory.hpp  test.hpp  test_mnist.hpp
models/: cnn_4x4_single.json  cnn_4x4_single.vectors.json  cnn_hand.vectors.json  deep_mlp.nk  deep_mlp.onnx  fashion_mnist_cnn.nk  fashion_mnist_cnn.onnx  fashion_mnist_mlp.nk  fashion_mnist_mlp.onnx  mlp_hand.vectors.json  mnist_cnn.json  op_matrix_cnn.nk  op_matrix_cnn.onnx  op_matrix_mlp.nk  op_matrix_mlp.onnx  test_cnn.json  test_cnn.vectors.json  test_mlp.json  test_mlp.vectors.json
models/mnist/: training_meta.json
models/mnist_cnn/: manifest.json  (+1 more)
python/: README.md  pyproject.toml
python/netkit/: datasets.py  reader.py  reference_forward.py  torch_models.py  torch_pack.py  torch_train.py
python/tests/: test_onnx_parity.py  test_torch_pack.py
src/: arena.cpp  cnn.cpp  inference.cpp  json_parser.cpp  main.cpp  mlp.cpp  model_loader.cpp  netkit_api.cpp  nk_loader.cpp  tensor_factory.cpp  test.cpp  test_mnist.cpp  vectors_loader.cpp
tests/: test_c_api.c
tools/: export_fashion_mnist_cnn.py  export_fashion_mnist_mlp.py  export_mnist_cnn.py  export_mnist_mlp.py  export_onnx_test_models.py  write_op_matrix_models.py
