[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netkit-tools"
version = "0.1.0"
description = "Convert ONNX models to binary .nk files for embedded inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "onnx",
  "onnxruntime",
]

[project.optional-dependencies]
train = ["torch>=2.0"]

[project.scripts]
netkit-pack = "netkit.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netkit*"]
